$Id: ChangeLog,v 1.46 2004/04/11 20:18:23 h_oudejans Exp $

2004-04-12 Herman Oudejans <hn.oudejans@quicknet.nl>
	* fixed gtk segfault when starting openmsx.

2004-04-11 Herman Oudejans <hn.oudejans@quicknet.nl>
	* joystickport devices are now prepluggable.
	* fixed UpdateComboSetting for gtk (was corrupted since the new
	   launch script).

2004-04-10 Herman Oudejans <hn.oudejans@quicknet.nl>
	* catapult displays pluggables being plugged in on openmsx.
	* catapult displays media changed in openmsx.

2004-04-09 Herman Oudejnas <hn.oudejans@quicknet.nl>
	* fixed bug: not able to use disk b, roms or tapes.

2004-04-08 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fixed windows build system. config.h is now created.
	   Unfortunately, I don't know how to set it as a dependency for
	   other files, so if it doesn't work, do a 'rebuild all'
	   - Moved dsp and dsw files to the build directory.
	   - Remove hardpaths (this means that the paths to wx includes and
	     and libs need to be added to: tools->options->directories in vc++).
	     There's no way to automate this, sorry :(
	* Devices can now be plugged in the joystick ports
	* Changed default directory behaviour while browsing for openmsx 
	   share directory

2004-04-07 Herman Oudejans <hn.oudejans@quicknet.nl>
	* History is updated when a new disk or tape is inserted while
	   openMSX is running.
	* History and used hardware is saved before openMSX is started and 
	   when a disk or tape is changed when openMSX is running.
	* Fixed: Media comboboxes were cleared on launch.

2004-04-06 Herman Oudejans <hn.oudejans@quicknet.nl>
	* When the configuration dialog is closed with Ok, catapult will
	   now run openmsx -v to make sure all parameter are set properly.
	* If the openmsx executable and/or share directory is changed,
	   catapult tries to restore the previous machine and extensions.	

2004-04-05 Maarten ter Huurne <maarten@treewalker.org>
	* Added "make install".
