@@ -1,4 +1,4 @@
-// $Id: PipeReadThread.cpp,v 1.2 2004/02/04 22:01:15 manuelbi Exp $
+// $Id: PipeReadThread.cpp,v 1.3 2004/04/01 08:31:48 h_oudejans Exp $
 // PipeReadThread.cpp: implementation of the PipeReadThread class.
 //
 //////////////////////////////////////////////////////////////////////
@@ -16,11 +16,10 @@
 // Construction/Destruction
 //////////////////////////////////////////////////////////////////////
 
-	PipeReadThread::PipeReadThread(wxWindow * target, int id, wxProcess * process, wxThreadKind kind)
+	PipeReadThread::PipeReadThread(wxWindow * target, int id, wxThreadKind kind)
 :wxThread(kind)
 {
 	m_target = target;
-	m_process = process;
 	m_id = id;
 }
 
@@ -31,30 +30,26 @@ PipeReadThread::~PipeReadThread()
 wxThread::ExitCode PipeReadThread::Entry()
 {
 #ifdef __UNIX__
-	// really runnning this
-	if (m_id == MSGID_STDOUT)	
-		m_inputstream = new wxTextInputStream (*m_process->GetInputStream());
-	else
-		m_inputstream = new wxTextInputStream (*m_process->GetErrorStream());
-
-
-	while (m_process->IsInputOpened())
-	{
-		wxString * temp = new wxString;
-		//		while ( !m_process->IsInputAvailable() && m_process->IsInputOpened() );		
-		*temp = (m_inputstream->ReadLine());
-		temp->Append(_("\n"));
-		wxCommandEvent event(EVT_CONTROLLER);
-		event.SetId(m_id);
-		event.SetClientData((void *)temp);
-		wxPostEvent(m_target, event);
-	}
+	size_t bytesRead;
+	char szBuffer[1001];
+	do{
+		bytesRead = read(m_descriptor,szBuffer,1000);
+		if (bytesRead > 0){
+			wxString temp2 = szBuffer;
+			wxString * temp = new wxString;
+			*temp = temp2.Left(bytesRead);
+			wxCommandEvent event(EVT_CONTROLLER);
+			event.SetId(m_id);
+			event.SetClientData((void *)temp);
+			wxPostEvent(m_target, event);	
+		}
+	}while (bytesRead > 0);
 
 #else	
 
 	DWORD dwBytesRead;
 	BOOL bResult;
-	char szBuffer [1010];
+	char szBuffer [1001];
 	do 	
 	{
 		bResult=ReadFile(m_hTarget,szBuffer,1000,&dwBytesRead,NULL);
@@ -70,10 +65,10 @@ wxThread::ExitCode PipeReadThread::Entry()
 
 		}
 	} while (bResult);
+	
 #endif	
 	wxCommandEvent endEvent(EVT_CONTROLLER);
 	endEvent.SetId(MSGID_ENDPROCESS);
 	wxPostEvent (m_target, endEvent);
-	delete m_inputstream;
 	return 0;
 }
